Pagina de usuario

--- a/ProyectoP2/ProyectoP2.csproj
+++ b/ProyectoP2/ProyectoP2.csproj
@@ -58,6 +58,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\carrito.jpg" />
+	  <None Remove="Resources\Images\login.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -77,6 +78,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
