--- a/ProyectoP2/ProyectoP2.csproj
+++ b/ProyectoP2/ProyectoP2.csproj
@@ -57,7 +57,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\Images\carrito.jpg" />
+	  <None Remove="Resources\Images\carrito.png" />
+	  <None Remove="Resources\Images\home.png" />
 	  <None Remove="Resources\Images\login.png" />
 	</ItemGroup>
 
